# SM3

./: CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  run_tests.sh
.github/: ci.yml
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/include/: atmmodel.hpp
project/src/: atmmodel.cpp
project/tests/: CMakeLists.txt
project/tests/src/: main_test.cpp
